[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/login_form.gd" type="Script" id=1]

[node name="LoginForm" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
margin_right = 220.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 0
text = "Login to Transaticka"
align = 1
valign = 1

[node name="InputBox" type="VBoxContainer" parent="."]
margin_top = 74.0
margin_right = 220.0
margin_bottom = 162.0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailLabel" type="Label" parent="InputBox"]
margin_right = 220.0
margin_bottom = 14.0
text = "Email"

[node name="EmailInput" type="LineEdit" parent="InputBox"]
margin_top = 18.0
margin_right = 220.0
margin_bottom = 42.0

[node name="PasswordLabel" type="Label" parent="InputBox"]
margin_top = 46.0
margin_right = 220.0
margin_bottom = 60.0
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="InputBox"]
margin_top = 64.0
margin_right = 220.0
margin_bottom = 88.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="."]
margin_top = 166.0
margin_right = 220.0
margin_bottom = 180.0
autowrap = true

[node name="ButtonBox" type="VBoxContainer" parent="."]
margin_top = 198.0
margin_right = 220.0
margin_bottom = 270.0
size_flags_vertical = 10
alignment = 2

[node name="CheckBox" type="CheckBox" parent="ButtonBox"]
margin_right = 220.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0
text = "Remember email"

[node name="LoginButton" type="Button" parent="ButtonBox"]
margin_top = 28.0
margin_right = 220.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -502.628, -13.1575 )
text = "Login"
__meta__ = {
"_editor_description_": ""
}

[node name="CreateAccountButton" type="Button" parent="ButtonBox"]
margin_top = 52.0
margin_right = 220.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( -502.628, -13.1575 )
text = "Create Account"
